adiciona o link para a pagina do dia eajuste menores na formatação

--- a/bootstrap/card.html
+++ b/bootstrap/card.html
@@ -1,123 +1,104 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous" />
-  </head>
 
-  <body>
-    <div class="container">
-      <div class="row my-2 gap-1 justify-content-between">
-        <div class="card col-3">
-          <div class="card-body">
-            <img
-              class="card-img-top"
-              src="https://www.w3schools.com/js/img_javascript_480.jpg"
-              alt="js logo" />
-            <h5 class="card-title h3">JavaScript</h5>
-            <p class="card-text">
-              Linguagem multiparadigma usada pelos navegadores de internet.
-            </p>
-          </div>
-          <a
-            class="btn btn-outline-warning mb-2"
-            href="https://pt.wikipedia.org/wiki/JavaScript"
-            target="_blank">
-            Saiba mais
-          </a>
-        </div>
-        <div class="card col-3">
-          <div class="card-body">
-            <img
-              class="card-img-top"
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Typescript.svg/1280px-Typescript.svg.png"
-              alt="ts" />
-            <h5 class="card-title h3">TypeScript</h5>
-            <p class="card-text">
-              Linguagem que complementa o JavaScript com um sistema de tipos.
-            </p>
-          </div>
-          <a
-            class="btn btn-outline-primary mb-2"
-            href="https://pt.wikipedia.org/wiki/TypeScript"
-            target="_blank">
-            Saiba mais
-          </a>
-        </div>
-        <div class="card col-3">
-          <div class="card-body">
-            <img
-              class="card-img-top"
-              src="https://miro.medium.com/1*vmFSpk9xtpxAHkH7cmt-3Q.png"
-              alt="golang logo" />
-            <h5 class="card-title h3">Golang</h5>
-            <p class="card-text">
-              Linguagem compilada criada pela Google em 2009. É usada em
-              sistemas de alta concorrência.
-            </p>
-          </div>
-          <a
-            class="btn btn-outline-info mb-2"
-            href="https://pt.wikipedia.org/wiki/Go_(linguagem_de_programa%C3%A7%C3%A3o)"
-            target="_blank">
-            Saiba mais
-          </a>
-        </div>
-      </div>
-      <div class="row my-2 align-items-center">
-        <div class="col-2">
-          <img
-            class="img-fluid"
-            src="https://upload.wikimedia.org/wikipedia/en/thumb/3/30/Java_programming_language_logo.svg/960px-Java_programming_language_logo.svg.png"
-            alt="Java" />
-        </div>
-        <div class="col-10">
-          <h4 class="title h2">Java</h4>
-          <p>
-            Java é uma linguagem de programação orientada a objetos desenvolvida
-            na década de 90 por uma equipe de programadores chefiada por James
-            Gosling, na empresa Sun Microsystems, que em 2008 foi adquirido pela
-            empresa Oracle Corporation. Diferente das linguagens de programação
-            modernas, que são compiladas para código nativo, Java é compilada
-            para um bytecode que é interpretado por uma máquina virtual (Java
-            Virtual Machine, abreviada JVM). A linguagem de programação Java é a
-            linguagem convencional da Plataforma Java, mas não é a sua única
-            linguagem. A J2ME é utilizada em jogos de computador, celular,
-            calculadoras, ou até mesmo o rádio do carro.
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Card</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="row my-2 gap-1 justify-content-between">
+      <div class="card col-3">
+        <div class="card-body">
+          <img class="card-img-top" src="https://www.w3schools.com/js/img_javascript_480.jpg" alt="js logo" />
+          <h5 class="card-title h3">JavaScript</h5>
+          <p class="card-text">
+            Linguagem multiparadigma usada pelos navegadores de internet.
           </p>
         </div>
+        <a class="btn btn-outline-warning mb-2" href="https://pt.wikipedia.org/wiki/JavaScript" target="_blank">
+          Saiba mais
+        </a>
       </div>
-      <div class="row my-2 align-items-center">
-        <div class="col-10">
-          <h4 class="h2">Python</h4>
-          <p>
-            Python é uma linguagem de programação de alto nível, interpretada de
-            script, imperativa, orientada a objetos, funcional, de tipagem
-            dinâmica e forte. Foi lançada por Guido van Rossum em 1991.
-            Atualmente, possui um modelo de desenvolvimento comunitário, aberto
-            e gerenciado pela organização sem fins lucrativos Python Software
-            Foundation. Apesar de várias partes da linguagem possuírem padrões e
-            especificações formais, a linguagem, como um todo, não é formalmente
-            especificada. O padrão na pratica é a implementação CPython.
+      <div class="card col-3">
+        <div class="card-body">
+          <img class="card-img-top"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Typescript.svg/1280px-Typescript.svg.png"
+            alt="ts" />
+          <h5 class="card-title h3">TypeScript</h5>
+          <p class="card-text">
+            Linguagem que complementa o JavaScript com um sistema de tipos.
           </p>
         </div>
-        <div class="col-2">
-          <img
-            class="img-fluid"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/250px-Python-logo-notext.svg.png"
-            alt="python" />
+        <a class="btn btn-outline-primary mb-2" href="https://pt.wikipedia.org/wiki/TypeScript" target="_blank">
+          Saiba mais
+        </a>
+      </div>
+      <div class="card col-3">
+        <div class="card-body">
+          <img class="card-img-top" src="https://miro.medium.com/1*vmFSpk9xtpxAHkH7cmt-3Q.png" alt="golang logo" />
+          <h5 class="card-title h3">Golang</h5>
+          <p class="card-text">
+            Linguagem compilada criada pela Google em 2009. É usada em
+            sistemas de alta concorrência.
+          </p>
         </div>
+        <a class="btn btn-outline-info mb-2"
+          href="https://pt.wikipedia.org/wiki/Go_(linguagem_de_programa%C3%A7%C3%A3o)" target="_blank">
+          Saiba mais
+        </a>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-      crossorigin="anonymous"></script>
-  </body>
+    <div class="row my-2 align-items-center">
+      <div class="col-2">
+        <img class="img-fluid"
+          src="https://upload.wikimedia.org/wikipedia/en/thumb/3/30/Java_programming_language_logo.svg/960px-Java_programming_language_logo.svg.png"
+          alt="Java" />
+      </div>
+      <div class="col-10">
+        <h4 class="title h2">Java</h4>
+        <p>
+          Java é uma linguagem de programação orientada a objetos desenvolvida
+          na década de 90 por uma equipe de programadores chefiada por James
+          Gosling, na empresa Sun Microsystems, que em 2008 foi adquirido pela
+          empresa Oracle Corporation. Diferente das linguagens de programação
+          modernas, que são compiladas para código nativo, Java é compilada
+          para um bytecode que é interpretado por uma máquina virtual (Java
+          Virtual Machine, abreviada JVM). A linguagem de programação Java é a
+          linguagem convencional da Plataforma Java, mas não é a sua única
+          linguagem. A J2ME é utilizada em jogos de computador, celular,
+          calculadoras, ou até mesmo o rádio do carro.
+        </p>
+      </div>
+    </div>
+    <div class="row my-2 align-items-center">
+      <div class="col-10">
+        <h4 class="h2">Python</h4>
+        <p>
+          Python é uma linguagem de programação de alto nível, interpretada de
+          script, imperativa, orientada a objetos, funcional, de tipagem
+          dinâmica e forte. Foi lançada por Guido van Rossum em 1991.
+          Atualmente, possui um modelo de desenvolvimento comunitário, aberto
+          e gerenciado pela organização sem fins lucrativos Python Software
+          Foundation. Apesar de várias partes da linguagem possuírem padrões e
+          especificações formais, a linguagem, como um todo, não é formalmente
+          especificada. O padrão na pratica é a implementação CPython.
+        </p>
+      </div>
+      <div class="col-2">
+        <img class="img-fluid"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/250px-Python-logo-notext.svg.png"
+          alt="python" />
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
