--- a/bootstrap/row.html
+++ b/bootstrap/row.html
@@ -1,91 +1,90 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mais tabelas</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <div class="container-fluid pb-3">
-      <div class="row bg-dark py-3">
-        <h1 class="text-center text-white">Hackaton Senac</h1>
-      </div>
-      <div class="row">
-        <img class="col-12 img-fluid" src="./img/banner.jpg" />
-      </div>
-      <div class="row mt-3">
-        <h2 class="text-center mb-3">Inscrições abertas</h2>
-      </div>
-      <div class="container">
-        <div class="row d-flex justify-content-around">
-          <div class="card col-3 p-3">
-            <img src="./img/programador.jpg" class="card-img-top" />
-            <h5 class="card-title">Programe um projeto real</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio veritatis animi doloremque voluptates explicabo ipsam
-              odio tempore quidem praesentium, rerum fugit assumenda molestiae
-              fuga, temporibus, dolore cupiditate? Eveniet, facere distinctio.
-            </p>
-          </div>
-          <div class="card col-3 p-3">
-            <img src="./img/premios.png" class="card-img-top" />
-            <h5 class="card-title">Concorra à prêmios</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio veritatis animi doloremque voluptates explicabo ipsam
-              odio tempore quidem praesentium, rerum fugit assumenda molestiae
-              fuga, temporibus, dolore cupiditate? Eveniet, facere distinctio.
-            </p>
-          </div>
-          <div class="card col-3 p-3">
-            <img src="./img/teamwork.jpg" class="card-img-top" />
-            <h5 class="card-title">Trabalhe em equipe</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio veritatis animi doloremque voluptates explicabo ipsam
-              odio tempore quidem praesentium, rerum fugit assumenda molestiae
-              fuga, temporibus, dolore cupiditate? Eveniet, facere distinctio.
-            </p>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mais tabelas</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="container-fluid pb-3">
+    <div class="row bg-dark py-3">
+      <h1 class="text-center text-white">Hackaton Senac</h1>
+    </div>
+    <div class="row">
+      <img class="col-12 img-fluid" src="./img/banner.jpg" />
+    </div>
+    <div class="row mt-3">
+      <h2 class="text-center mb-3">Inscrições abertas</h2>
+    </div>
+    <div class="container">
+      <div class="row d-flex justify-content-around">
+        <div class="card col-3 p-3">
+          <img src="./img/programador.jpg" class="card-img-top" />
+          <h5 class="card-title">Programe um projeto real</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Distinctio veritatis animi doloremque voluptates explicabo ipsam
+            odio tempore quidem praesentium, rerum fugit assumenda molestiae
+            fuga, temporibus, dolore cupiditate? Eveniet, facere distinctio.
+          </p>
         </div>
-      </div>
-      <div class="container">
-        <div class="row justify-content-around">
-          <h2 class="col-12 text-center my-3">Depoimentos</h2>
-          <div class="card col-5 shadow-sm">
-            <blockquote class="blockquote">
-              <p class="fs-4">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est
-                sapiente ipsa soluta quo repellendus voluptates necessitatibus
-                corrupti ullam magnam unde blanditiis veniam qui sed quis animi,
-                neque, cum ad ratione.
-              </p>
-              <footer class="blockquote-footer">Fulanin</footer>
-            </blockquote>
-          </div>
-          <div class="card col-5 shadow-sm">
-            <blockquote class="blockquote">
-              <p class="fs-4">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est
-                sapiente ipsa soluta quo repellendus voluptates necessitatibus
-                corrupti ullam magnam unde blanditiis veniam qui sed quis animi,
-                neque, cum ad ratione.
-              </p>
-              <footer class="blockquote-footer">Cicrano</footer>
-            </blockquote>
-          </div>
+        <div class="card col-3 p-3">
+          <img src="./img/premios.png" class="card-img-top" />
+          <h5 class="card-title">Concorra à prêmios</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Distinctio veritatis animi doloremque voluptates explicabo ipsam
+            odio tempore quidem praesentium, rerum fugit assumenda molestiae
+            fuga, temporibus, dolore cupiditate? Eveniet, facere distinctio.
+          </p>
+        </div>
+        <div class="card col-3 p-3">
+          <img src="./img/teamwork.jpg" class="card-img-top" />
+          <h5 class="card-title">Trabalhe em equipe</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Distinctio veritatis animi doloremque voluptates explicabo ipsam
+            odio tempore quidem praesentium, rerum fugit assumenda molestiae
+            fuga, temporibus, dolore cupiditate? Eveniet, facere distinctio.
+          </p>
         </div>
       </div>
     </div>
-  </body>
+    <div class="container">
+      <div class="row justify-content-around">
+        <h2 class="col-12 text-center my-3">Depoimentos</h2>
+        <div class="card col-5 shadow-sm">
+          <blockquote class="blockquote">
+            <p class="fs-4">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est
+              sapiente ipsa soluta quo repellendus voluptates necessitatibus
+              corrupti ullam magnam unde blanditiis veniam qui sed quis animi,
+              neque, cum ad ratione.
+            </p>
+            <footer class="blockquote-footer">Fulanin</footer>
+          </blockquote>
+        </div>
+        <div class="card col-5 shadow-sm">
+          <blockquote class="blockquote">
+            <p class="fs-4">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est
+              sapiente ipsa soluta quo repellendus voluptates necessitatibus
+              corrupti ullam magnam unde blanditiis veniam qui sed quis animi,
+              neque, cum ad ratione.
+            </p>
+            <footer class="blockquote-footer">Cicrano</footer>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
