--- a/html-css-basico/historiaWeb.html
+++ b/html-css-basico/historiaWeb.html
@@ -1,44 +1,39 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>História da Web</title>
-  </head>
-  <body>
-    <h1>HTML, Navegador e HTTP</h1>
-    <p><u>A base da web moderna</u></p>
-    <h2>A origem do HTML</h2>
-    <p>
-      O HTML surgiu no início dos anos 90, criado por <i>Tim Berness-Lee</i>.
-      Ele foi desenvolvido para estruturar documentos contendo textos, links e
-      outros elementos.
-    </p>
-    <h2>Os navegadores</h2>
-    <p>
-      Para interpretar o código HTML, surgiram os primeiros
-      <u>navegadores</u> que tranformam o código em páginas visuais
-    </p>
-    <h2>Protocolo HTTP</h2>
-    <p>
-      O HTTP é o protocolo responsável pela comunicação entre o <i>cliente</i> e
-      o <i>servidor</i>.
-    </p>
-    <p>
-      <a
-        href="https://pt.wikipedia.org/wiki/Hist%C3%B3ria_da_Internet"
-        target="_blank">
-        Saiba mais
-      </a>
-    </p>
-    <img src="html.jpg" alt="html" width="10%" /> <br />
-    <iframe
-      width="560"
-      height="315"
-      src="https://www.youtube.com/embed/Gu_L8MPvGJM?si=dZBkFKruAE_YDM_Y"
-      title="YouTube video player"
-      frameborder="0"
-      allow="
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>História da Web</title>
+</head>
+
+<body>
+  <h1>HTML, Navegador e HTTP</h1>
+  <p><u>A base da web moderna</u></p>
+  <h2>A origem do HTML</h2>
+  <p>
+    O HTML surgiu no início dos anos 90, criado por <i>Tim Berness-Lee</i>.
+    Ele foi desenvolvido para estruturar documentos contendo textos, links e
+    outros elementos.
+  </p>
+  <h2>Os navegadores</h2>
+  <p>
+    Para interpretar o código HTML, surgiram os primeiros
+    <u>navegadores</u> que tranformam o código em páginas visuais
+  </p>
+  <h2>Protocolo HTTP</h2>
+  <p>
+    O HTTP é o protocolo responsável pela comunicação entre o <i>cliente</i> e
+    o <i>servidor</i>.
+  </p>
+  <p>
+    <a href="https://pt.wikipedia.org/wiki/Hist%C3%B3ria_da_Internet" target="_blank">
+      Saiba mais
+    </a>
+  </p>
+  <img src="html.jpg" alt="html" width="10%" /> <br />
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Gu_L8MPvGJM?si=dZBkFKruAE_YDM_Y"
+    title="YouTube video player" frameborder="0" allow="
         accelerometer;
         autoplay;
         clipboard-write;
@@ -46,9 +41,8 @@
         gyroscope;
         picture-in-picture;
         web-share;
-      "
-      referrerpolicy="strict-origin-when-cross-origin"
-      allowfullscreen></iframe>
-    <figcaption>Russo codando muito em C</figcaption>
-  </body>
+      " referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <figcaption>Russo codando muito em C</figcaption>
+</body>
+
 </html>
