--- a/html-css-basico/java.html
+++ b/html-css-basico/java.html
@@ -1,80 +1,67 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Java</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous" />
-  </head>
-  <body>
-    <div class="container">
-      <header class="header-container">
-        <h1 class="titulo-princial">
-          A Linguagem de programação <span class="titulo-destaque">Java</span>
-        </h1>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/en/thumb/3/30/Java_programming_language_logo.svg/960px-Java_programming_language_logo.svg.png"
-          alt="Java icon"
-          width="50" />
-      </header>
-      <section class="topico">
-        <img
-          src="https://openjdk.org/images/duke-thinking.png"
-          alt="Duke pensando" />
-        <article>
-          <h2 class="subtitulo">Quando surgiu?</h2>
-          <p>
-            Nasceu em <b>1995</b> na Sun Microsystems, originalmente com o nome
-            de Oak. Seu principal responsável foi
-            <a
-              href="https://pt.wikipedia.org/wiki/James_Gosling"
-              target="_blank">
-              James Gosling.
-            </a>
-            Em 2009, a Sun foi adquirida pela Oracle por cerca de 7,4 bilhões de
-            dólares. Ganhando assim os direitos do Java e de outros produtos,
-            como o MySQL (Banco de dados relacionais).
-          </p>
-        </article>
-      </section>
-      <section class="topico">
-        <img
-          src="https://openjdk.org/images/duke-chalkboard.png"
-          alt="Duke quadro branco" />
-        <div>
-          <h2 class="subtitulo">Por que do nome Java?</h2>
-          <p>
-            Vem de um café que os criadores da linguagem adoravam tomar, o café
-            da
-            <a href="https://pt.wikipedia.org/wiki/Java" target="_blank">
-              Ilha de Java
-            </a>
-            na indonésia. Desse mesmo café vem também a icônico logo da
-            linguagem!
-          </p>
-        </div>
-      </section>
-      <section class="topico">
-        <article>
-          <h2 class="subtitulo">Paradigma</h2>
-          <p>
-            Java é totalmente orientada à objetos, com grande inspiração no
-            SmallTalk dos anos 80. Tudo é um objeto, com propriedades e métodos
-            próprios
-          </p>
-        </article>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/pbb0jzXt_xA?si=sasLFS3MWGLMqhh2"
-          title="YouTube video player"
-          frameborder="0"
-          allow="
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Java</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+</head>
+
+<body>
+  <div class="container">
+    <header class="header-container">
+      <h1 class="titulo-princial">
+        A Linguagem de programação <span class="titulo-destaque">Java</span>
+      </h1>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/en/thumb/3/30/Java_programming_language_logo.svg/960px-Java_programming_language_logo.svg.png"
+        alt="Java icon" width="50" />
+    </header>
+    <section class="topico">
+      <img src="https://openjdk.org/images/duke-thinking.png" alt="Duke pensando" />
+      <article>
+        <h2 class="subtitulo">Quando surgiu?</h2>
+        <p>
+          Nasceu em <b>1995</b> na Sun Microsystems, originalmente com o nome
+          de Oak. Seu principal responsável foi
+          <a href="https://pt.wikipedia.org/wiki/James_Gosling" target="_blank">
+            James Gosling.
+          </a>
+          Em 2009, a Sun foi adquirida pela Oracle por cerca de 7,4 bilhões de
+          dólares. Ganhando assim os direitos do Java e de outros produtos,
+          como o MySQL (Banco de dados relacionais).
+        </p>
+      </article>
+    </section>
+    <section class="topico">
+      <img src="https://openjdk.org/images/duke-chalkboard.png" alt="Duke quadro branco" />
+      <div>
+        <h2 class="subtitulo">Por que do nome Java?</h2>
+        <p>
+          Vem de um café que os criadores da linguagem adoravam tomar, o café
+          da
+          <a href="https://pt.wikipedia.org/wiki/Java" target="_blank">
+            Ilha de Java
+          </a>
+          na indonésia. Desse mesmo café vem também a icônico logo da
+          linguagem!
+        </p>
+      </div>
+    </section>
+    <section class="topico">
+      <article>
+        <h2 class="subtitulo">Paradigma</h2>
+        <p>
+          Java é totalmente orientada à objetos, com grande inspiração no
+          SmallTalk dos anos 80. Tudo é um objeto, com propriedades e métodos
+          próprios
+        </p>
+      </article>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/pbb0jzXt_xA?si=sasLFS3MWGLMqhh2"
+        title="YouTube video player" frameborder="0" allow="
             accelerometer;
             autoplay;
             clipboard-write;
@@ -82,27 +69,20 @@
             gyroscope;
             picture-in-picture;
             web-share;
-          "
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen></iframe>
-      </section>
-      <section class="topico">
-        <article>
-          <h2 class="subtitulo">Compilado ou interpretado?</h2>
-          <p>
-            Um pouco dos dois... Os arquivos <i>.java</i> são compilados para
-            arquivos
-            <i>.class</i>
-            que podem ser interpretados pela JVM.
-          </p>
-        </article>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/SNyh-cubxaU?si=Gk7Y8bCktCslPKS_"
-          title="YouTube video player"
-          frameborder="0"
-          allow="
+          " referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+    <section class="topico">
+      <article>
+        <h2 class="subtitulo">Compilado ou interpretado?</h2>
+        <p>
+          Um pouco dos dois... Os arquivos <i>.java</i> são compilados para
+          arquivos
+          <i>.class</i>
+          que podem ser interpretados pela JVM.
+        </p>
+      </article>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/SNyh-cubxaU?si=Gk7Y8bCktCslPKS_"
+        title="YouTube video player" frameborder="0" allow="
             accelerometer;
             autoplay;
             clipboard-write;
@@ -110,29 +90,22 @@
             gyroscope;
             picture-in-picture;
             web-share;
-          "
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen></iframe>
-      </section>
-      <section class="topico">
-        <article>
-          <h2 class="subtitulo">JVM?</h2>
-          <p>
-            <i>JVM - Java Virtual Machine</i> é o que dá sentido ao slogan do
-            Java: <b>"Write once, run anywhere"</b> - "Escreva uma vez, rode em
-            qualquer lugar" em tradução livre. Se trata de um programa que
-            executa o seu código, sem precisar ser compilado para cada sistema
-            diferente. Um programa escrito para Mac funciona no Windows sem
-            adaptações. Esse é o poder da JVM.
-          </p>
-        </article>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/-rqptX0AqgI?si=CVhX4katniltHdKv"
-          title="YouTube video player"
-          frameborder="0"
-          allow="
+          " referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+    <section class="topico">
+      <article>
+        <h2 class="subtitulo">JVM?</h2>
+        <p>
+          <i>JVM - Java Virtual Machine</i> é o que dá sentido ao slogan do
+          Java: <b>"Write once, run anywhere"</b> - "Escreva uma vez, rode em
+          qualquer lugar" em tradução livre. Se trata de um programa que
+          executa o seu código, sem precisar ser compilado para cada sistema
+          diferente. Um programa escrito para Mac funciona no Windows sem
+          adaptações. Esse é o poder da JVM.
+        </p>
+      </article>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/-rqptX0AqgI?si=CVhX4katniltHdKv"
+        title="YouTube video player" frameborder="0" allow="
             accelerometer;
             autoplay;
             clipboard-write;
@@ -140,31 +113,24 @@
             gyroscope;
             picture-in-picture;
             web-share;
-          "
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen></iframe>
-      </section>
-      <section class="topico">
-        <div>
-          <h2 class="subtitulo">Onde é usado?</h2>
-          <p>
-            Por muito tempo Java foi o líder de mercado para desenvolvimento
-            web, mobile, sistemas e etc. Graças a JVM o ele dominou inúmeras
-            plataformas por muitos anos. Sua principal aplicação nos dias de
-            hoje é Programação Web Backend com o Framework <i>SpringBoot</i>, em
-            Sistemas Desktop legado e grandes jogos como
-            <a href="https://pt.wikipedia.org/wiki/Minecraft">Minecraft</a> e o
-            recém lançado
-            <a href="https://pt.wikipedia.org/wiki/Hytale">Hytale</a>
-          </p>
-        </div>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/mCQH_aWLlVE?si=DS10Yr59IQuWt8v7"
-          title="YouTube video player"
-          frameborder="0"
-          allow="
+          " referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+    <section class="topico">
+      <div>
+        <h2 class="subtitulo">Onde é usado?</h2>
+        <p>
+          Por muito tempo Java foi o líder de mercado para desenvolvimento
+          web, mobile, sistemas e etc. Graças a JVM o ele dominou inúmeras
+          plataformas por muitos anos. Sua principal aplicação nos dias de
+          hoje é Programação Web Backend com o Framework <i>SpringBoot</i>, em
+          Sistemas Desktop legado e grandes jogos como
+          <a href="https://pt.wikipedia.org/wiki/Minecraft">Minecraft</a> e o
+          recém lançado
+          <a href="https://pt.wikipedia.org/wiki/Hytale">Hytale</a>
+        </p>
+      </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/mCQH_aWLlVE?si=DS10Yr59IQuWt8v7"
+        title="YouTube video player" frameborder="0" allow="
             accelerometer;
             autoplay;
             clipboard-write;
@@ -172,28 +138,21 @@
             gyroscope;
             picture-in-picture;
             web-share;
-          "
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen></iframe>
-      </section>
-      <section class="topico">
-        <div>
-          <h2 class="subtitulo">Boa para iniciantes?</h2>
-          <p>
-            Para entender sobre orientação à objetos Java é uma excelente
-            linguagem. Ela te leva a pensar em tudo no seu código como uma
-            classe. Para uso comercial é ainda melhor, sua robustez, ecossistema
-            e portabilidade fazem a linguagem ser a queridinha das grandes
-            empresas financeiras e sistemas distribuídos
-          </p>
-        </div>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/9XKY54yxPN4?si=bh4xY8ybqSxjiqyv"
-          title="YouTube video player"
-          frameborder="0"
-          allow="
+          " referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+    <section class="topico">
+      <div>
+        <h2 class="subtitulo">Boa para iniciantes?</h2>
+        <p>
+          Para entender sobre orientação à objetos Java é uma excelente
+          linguagem. Ela te leva a pensar em tudo no seu código como uma
+          classe. Para uso comercial é ainda melhor, sua robustez, ecossistema
+          e portabilidade fazem a linguagem ser a queridinha das grandes
+          empresas financeiras e sistemas distribuídos
+        </p>
+      </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/9XKY54yxPN4?si=bh4xY8ybqSxjiqyv"
+        title="YouTube video player" frameborder="0" allow="
             accelerometer;
             autoplay;
             clipboard-write;
@@ -201,77 +160,68 @@
             gyroscope;
             picture-in-picture;
             web-share;
-          "
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen></iframe>
-      </section>
-      <section class="topico">
-        <div>
-          <h2 class="subtitulo">Hello World</h2>
-          <pre>
+          " referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+    <section class="topico">
+      <div>
+        <h2 class="subtitulo">Hello World</h2>
+        <pre>
             <code>
 public static void main(String[] args){ 
   System.out.println("Hello World");
 }
             </code>
           </pre>
-          <p>
-            Wow, isso realmente parece bem grande. Mas vou te mostrar que é mais
-            fácil de entender do que parece...
-          </p>
-          <code>public static void main(String[] args)</code>
-          <p>
-            esse é o ponto de entrada do nosso código, estamos dizendo ao Java
-            que queremos executar todo o código que está entre chaves. Simples
-            assim.
-          </p>
-          <code>System.out.println("Hello World");</code>
-          <p>
-            Ok... Comparado com linguagens como python, o Java é bem extenso no
-            seu "print". Vamos por partes. <code>System</code> é uma classe
-            utilitária que contém vários métodos que interagem diretamente com o
-            sistema. <code>out</code> é uma propriedade especifica, os dados de
-            saída do programa. <code>println</code> é o nosso método (ou função)
-            de ouro! Ele imprime no terminal tudo que está entre as aspas, no
-            caso acima a String "Hello World". Por fim, o <code>;</code> no
-            final avisa ao Java que terminamos de escrever uma linha de código.
-          </p>
-          <p>
-            Pronto! Viu como foi simples? Muitos desenvolvedores se afastam da
-            linguagem logo no primeiro momento por conta dessa idéia que precisa
-            escrever muitas linhas de código...
-          </p>
-        </div>
-      </section>
-      <aside>
-        Link de apoio:
-        <a
-          href="https://medium.com/@habbema/java-hello-world-6dc92ce90a63"
-          target="_blank">
-          JAVA: Hello World
-        </a>
-        by Hugo Habbema
-      </aside>
-      <section class="topico">
-        <div>
-          <h2 class="subtitulo">Considerações finais</h2>
-          <p>
-            Alguns programadores possuem receio ao trabalhar com a linguagem,
-            pensam que é um dinossauro corporativo e lento. Mas a realidade
-            conta outra história. A linguagem superou a provação do tempo e até
-            hoje continua nos topo dos rankings de linguagens. A orientação à
-            objetos pode assustar um pouco, mas ela contribui com o
-            desenvolvimento de grandes aplicações abstraindo grande parte da
-            lógica deixando você focar na regra de negócio.
-          </p>
-        </div>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/xdMX0IE1xUM?si=v5QwP0-dxZqlYPKu"
-          title="YouTube video player"
-          frameborder="0"
-          allow="
+        <p>
+          Wow, isso realmente parece bem grande. Mas vou te mostrar que é mais
+          fácil de entender do que parece...
+        </p>
+        <code>public static void main(String[] args)</code>
+        <p>
+          esse é o ponto de entrada do nosso código, estamos dizendo ao Java
+          que queremos executar todo o código que está entre chaves. Simples
+          assim.
+        </p>
+        <code>System.out.println("Hello World");</code>
+        <p>
+          Ok... Comparado com linguagens como python, o Java é bem extenso no
+          seu "print". Vamos por partes. <code>System</code> é uma classe
+          utilitária que contém vários métodos que interagem diretamente com o
+          sistema. <code>out</code> é uma propriedade especifica, os dados de
+          saída do programa. <code>println</code> é o nosso método (ou função)
+          de ouro! Ele imprime no terminal tudo que está entre as aspas, no
+          caso acima a String "Hello World". Por fim, o <code>;</code> no
+          final avisa ao Java que terminamos de escrever uma linha de código.
+        </p>
+        <p>
+          Pronto! Viu como foi simples? Muitos desenvolvedores se afastam da
+          linguagem logo no primeiro momento por conta dessa idéia que precisa
+          escrever muitas linhas de código...
+        </p>
+      </div>
+    </section>
+    <aside>
+      Link de apoio:
+      <a href="https://medium.com/@habbema/java-hello-world-6dc92ce90a63" target="_blank">
+        JAVA: Hello World
+      </a>
+      by Hugo Habbema
+    </aside>
+    <section class="topico">
+      <div>
+        <h2 class="subtitulo">Considerações finais</h2>
+        <p>
+          Alguns programadores possuem receio ao trabalhar com a linguagem,
+          pensam que é um dinossauro corporativo e lento. Mas a realidade
+          conta outra história. A linguagem superou a provação do tempo e até
+          hoje continua nos topo dos rankings de linguagens. A orientação à
+          objetos pode assustar um pouco, mas ela contribui com o
+          desenvolvimento de grandes aplicações abstraindo grande parte da
+          lógica deixando você focar na regra de negócio.
+        </p>
+      </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/xdMX0IE1xUM?si=v5QwP0-dxZqlYPKu"
+        title="YouTube video player" frameborder="0" allow="
             accelerometer;
             autoplay;
             clipboard-write;
@@ -279,15 +229,13 @@ public static void main(String[] args){
             gyroscope;
             picture-in-picture;
             web-share;
-          "
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen></iframe>
-      </section>
-      <footer>&copy; 2026 Kauan Allyson. Todos os direitos reservados.</footer>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-      crossorigin="anonymous"></script>
-  </body>
+          " referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+    <footer>&copy; 2026 Kauan Allyson. Todos os direitos reservados.</footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
