--- a/html-css-basico/listaOrdenada.html
+++ b/html-css-basico/listaOrdenada.html
@@ -1,24 +1,24 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista Ordenada</title>
-  </head>
-  <body>
-    <h1>Etapas do desenvolvimento de projetos web</h1>
-    <ol type="i">
-      <li>Planejamento</li>
-      <li>Criação da estrutura HTML</li>
-      <li>Estilização com CSS</li>
-      <li>Programação em JS</li>
-      <li>Testes e correções</li>
-      <li>Publicação</li>
-    </ol>
-    <img
-      src="https://www.w3schools.com/js/img_javascript_480.jpg"
-      alt="logo js"
-      width="75" />
-    <img src="elephpant.png" alt="logo php" width="75" />
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lista Ordenada</title>
+</head>
+
+<body>
+  <h1>Etapas do desenvolvimento de projetos web</h1>
+  <ol type="i">
+    <li>Planejamento</li>
+    <li>Criação da estrutura HTML</li>
+    <li>Estilização com CSS</li>
+    <li>Programação em JS</li>
+    <li>Testes e correções</li>
+    <li>Publicação</li>
+  </ol>
+  <img src="https://www.w3schools.com/js/img_javascript_480.jpg" alt="logo js" width="75" />
+  <img src="elephpant.png" alt="logo php" width="75" />
+</body>
+
 </html>
