--- a/html-css-basico/textCSS.html
+++ b/html-css-basico/textCSS.html
@@ -1,36 +1,37 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Css básico</title>
-  </head>
 
-  <body
-    style="
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Css básico</title>
+</head>
+
+<body style="
       background-color: ghostwhite;
       font-family: Arial, Helvetica, sans-serif;
       color: rebeccapurple;
       font-size: 12pt;
       text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.314);
     ">
-    <h1 style="text-align: center">Dica de estudo para programação web</h1>
-    <h2>Pratique todos os dias</h2>
-    <p>
-      Comece a aplicar os conceitos que você aprendeu em exercícios diários. Com
-      o tempo você vai perceber que as soluções se tornam mais naturais, e a
-      lógica por trás delas fica mais clara.
-    </p>
-    <h2>Foque nos fundamentos antes de ferramentas</h2>
-    <p>
-      Entenda primeiro os fundamentos de HTML, CSS e JavaScript antes de
-      aprender frameworks como React, Vue.js ou Bootstrap.
-    </p>
-    <h2>Desenvolva projetos reais</h2>
-    <p>
-      Isso não só significa que você aprendeu, mas também te dá uma sensação de
-      realização. Esses projetos podem ser o seu diferencial quando você for
-      mostrar um portifólio para um futuro empregador ou cliente.
-    </p>
-  </body>
+  <h1 style="text-align: center">Dica de estudo para programação web</h1>
+  <h2>Pratique todos os dias</h2>
+  <p>
+    Comece a aplicar os conceitos que você aprendeu em exercícios diários. Com
+    o tempo você vai perceber que as soluções se tornam mais naturais, e a
+    lógica por trás delas fica mais clara.
+  </p>
+  <h2>Foque nos fundamentos antes de ferramentas</h2>
+  <p>
+    Entenda primeiro os fundamentos de HTML, CSS e JavaScript antes de
+    aprender frameworks como React, Vue.js ou Bootstrap.
+  </p>
+  <h2>Desenvolva projetos reais</h2>
+  <p>
+    Isso não só significa que você aprendeu, mas também te dá uma sensação de
+    realização. Esses projetos podem ser o seu diferencial quando você for
+    mostrar um portifólio para um futuro empregador ou cliente.
+  </p>
+</body>
+
 </html>
