--- a/html-css-basico/formCss.html
+++ b/html-css-basico/formCss.html
@@ -1,86 +1,90 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form com css</title>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-      * {
-        font-family: "Poppins", sans-serif;
-      }
-      table {
-        width: 50%;
-        margin: auto;
-        border-collapse: collapse;
-      }
-      tr:hover {
-        background: #f0f0f0;
-      }
-      th,
-      td {
-        border-bottom: 1px solid #d8d8d8;
-      }
-      th {
-        height: 70px;
-        font-size: 1.5em;
-      }
-      td {
-        padding: 10px;
-        text-align: center;
-      }
-      .login-input {
-        width: 50%;
-        padding: 4px 8px;
-        border: 1px solid #bbb;
-        border-radius: 4px;
-        box-sizing: border-box;
-        transition: all 150ms ease-in-out;
-      }
-      .destaque:focus {
-        outline: none;
-        width: 80%;
-        border-radius: 20px;
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-      }
-      .obrigatorio {
-        color: #ff5050;
-        margin: 0 4px;
-      }
-    </style>
-  </head>
-  <body>
-    <form>
-      <table>
-        <tr>
-          <th colspan="2">Login</th>
-        </tr>
-        <tr>
-          <td><span class="obrigatorio">*</span>Usuário:</td>
-          <td>
-            <input
-              class="login-input destaque"
-              type="text"
-              required
-              placeholder="Seu usuário" />
-          </td>
-        </tr>
-        <tr>
-          <td><span class="obrigatorio">*</span>Senha:</td>
-          <td>
-            <input
-              class="login-input destaque"
-              type="password"
-              required
-              placeholder="Sua senha" />
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <input type="submit" value="Entrar" />
-          </td>
-        </tr>
-      </table>
-    </form>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Form com css</title>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+    * {
+      font-family: "Poppins", sans-serif;
+    }
+
+    table {
+      width: 50%;
+      margin: auto;
+      border-collapse: collapse;
+    }
+
+    tr:hover {
+      background: #f0f0f0;
+    }
+
+    th,
+    td {
+      border-bottom: 1px solid #d8d8d8;
+    }
+
+    th {
+      height: 70px;
+      font-size: 1.5em;
+    }
+
+    td {
+      padding: 10px;
+      text-align: center;
+    }
+
+    .login-input {
+      width: 50%;
+      padding: 4px 8px;
+      border: 1px solid #bbb;
+      border-radius: 4px;
+      box-sizing: border-box;
+      transition: all 150ms ease-in-out;
+    }
+
+    .destaque:focus {
+      outline: none;
+      width: 80%;
+      border-radius: 20px;
+      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .obrigatorio {
+      color: #ff5050;
+      margin: 0 4px;
+    }
+  </style>
+</head>
+
+<body>
+  <form>
+    <table>
+      <tr>
+        <th colspan="2">Login</th>
+      </tr>
+      <tr>
+        <td><span class="obrigatorio">*</span>Usuário:</td>
+        <td>
+          <input class="login-input destaque" type="text" required placeholder="Seu usuário" />
+        </td>
+      </tr>
+      <tr>
+        <td><span class="obrigatorio">*</span>Senha:</td>
+        <td>
+          <input class="login-input destaque" type="password" required placeholder="Sua senha" />
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <input type="submit" value="Entrar" />
+        </td>
+      </tr>
+    </table>
+  </form>
+</body>
+
 </html>
