--- a/jocile/formulario-animado.html
+++ b/jocile/formulario-animado.html
@@ -5,82 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario rodando</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <style>
-      * {
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-      }
-
-      .flex {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-      }
-
-      .container {
-        height: 200px;
-        perspective: 1000px;
-        position: relative;
-        width: 300px;
-        margin: 2rem auto;
-      }
-
-      .card {
-        height: 100%;
-        width: 100%;
-        position: relative;
-        transform-style: preserve-3d;
-        transition: transform 1s;
-      }
-
-      .card h2 {
-        text-align: center;
-      }
-
-      .card section {
-        backface-visibility: hidden;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        padding: 20px;
-        background-color: #fff;
-        border: 1px solid #ddd;
-        border-radius: 10px;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
-      }
-
-      .toggle {
-        cursor: pointer;
-      }
-
-      form {
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        gap: 1rem;
-      }
-
-      .flex:has(input),
-      .flex:has(button) {
-        gap: 0.5rem;
-      }
-
-      .flex button {
-        width: 60%;
-        padding: 2px;
-      }
-
-      .signUp {
-        transform: rotateY(180deg);
-      }
-
-      .card.flipped {
-        transform: rotateY(180deg);
-      }
-    </style>
+    <link rel="stylesheet" href="css/formulario-animado.css" />
   </head>
   <body>
     <div class="container">
@@ -119,11 +44,6 @@
       </div>
     </div>
 
-    <script>
-      $(".toggle").on("click", (e) => {
-        e.preventDefault();
-        $(".card").toggleClass("flipped");
-      });
-    </script>
+    <script src="js/formulario-animado.js"></script>
   </body>
 </html>
