--- a/jocile/formulario-animado.html
+++ b/jocile/formulario-animado.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulario rodando</title>
+    <title>Formulario animado</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="css/formulario-animado.css" />
   </head>
