--- a/jquery/alcool-ou-gasolina.html
+++ b/jquery/alcool-ou-gasolina.html
@@ -9,15 +9,16 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet" />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="css/alcool-ou-gasolina.css" />
   </head>
+
   <body>
-    <header class="hero-section text-center">
+    <header class="hero-section text-center py-5 bg-light">
       <div class="container">
         <i class="fas fa-gas-pump fa-3x mb-3"></i>
         <h1 class="fw-bold">Álcool ou Gasolina?</h1>
@@ -25,8 +26,9 @@
       </div>
     </header>
 
-    <main class="container mb-5">
+    <main class="container my-5">
       <div class="row g-4">
+        <!-- Formulário -->
         <div class="col-lg-5">
           <div class="card shadow-sm p-4">
             <h4 class="mb-4 fw-bold text-secondary">Novo Abastecimento</h4>
@@ -41,6 +43,7 @@
                     type="text"
                     class="form-control"
                     id="nome"
+                    name="nome"
                     placeholder="Ex: Gasolina Aditivada"
                     required
                     autofocus />
@@ -51,19 +54,21 @@
                 <div class="col-md-6 mb-3">
                   <label class="form-label fw-semibold">Distância (km)</label>
                   <div class="input-group">
-                    <span class="input-group-text">
-                      <i class="fas fa-road"></i>
-                    </span>
+                    <span class="input-group-text"
+                      ><i class="fas fa-road"></i
+                    ></span>
                     <input
                       type="number"
                       class="form-control"
                       id="kmPercorridos"
+                      name="kmPercorridos"
                       placeholder="0.0"
                       step="0.1"
                       min="0"
                       required />
                   </div>
                 </div>
+
                 <div class="col-md-6 mb-3">
                   <label class="form-label fw-semibold">Litros</label>
                   <div class="input-group">
@@ -74,6 +79,7 @@
                       type="number"
                       class="form-control"
                       id="litros"
+                      name="litros"
                       placeholder="0.0"
                       step="0.01"
                       min="0"
@@ -83,9 +89,9 @@
               </div>
 
               <div class="mb-4">
-                <label class="form-label fw-semibold">
-                  Preço por Litro (R$)
-                </label>
+                <label class="form-label fw-semibold"
+                  >Preço por Litro (R$)</label
+                >
                 <div class="input-group">
                   <span class="input-group-text">
                     <i class="fas fa-tag"></i>
@@ -94,6 +100,7 @@
                     type="number"
                     class="form-control"
                     id="preco"
+                    name="preco"
                     placeholder="0.00"
                     step="0.01"
                     min="0"
@@ -116,13 +123,13 @@
           </div>
         </div>
 
+        <!-- Resultados -->
         <div class="col-lg-7">
           <div id="result" class="row g-3"></div>
         </div>
       </div>
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/alcool-ou-gasolina.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
